--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 
 MONGODB_URI = "mongodb+srv://halimayasmin6579:azMeRnqZkEH0PgHs@cluster0.moeoh.mongodb.net"
-CLERK_WEBHOOK_SECRET = ""
+CLERK_WEBHOOK_SECRET = "https://job-portal-new-server-taupe.vercel.app/webhooks"
