--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 
-MONGODB_URI = "mongodb+srv://halimayasmin6579:azMeRnqZkEH0PgHs@cluster0.moeoh.mongodb.net"
-CLERK_WEBHOOK_SECRET = "https://job-portal-new-server-taupe.vercel.app/webhooks"
+MONGODB_URI = mongodb+srv://halimayasmin6579:azMeRnqZkEH0PgHs@cluster0.moeoh.mongodb.net
+CLERK_WEBHOOK_SECRET = whsec_Rx3xT5+H8L59pV5mOwqT1pMXICs7UDeX
