--- a/server/vercel.json
+++ b/server/vercel.json
@@ -16,5 +16,12 @@
             "src": "/(.*)",
             "dest": "server.js"
         }
-    ]
+    ],
+    
+    "functions": {
+          "api/webhooks.js": {
+            "maxDuration": 30
+          }
+        }
+      
 }
