--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@clerk/express": "^1.7.4",
     "@sentry/node": "^8.54.0",
     "@sentry/profiling-node": "^8.54.0",
     "bcrypt": "^6.0.0",
