--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.22.6",
+    "@clerk/clerk-sdk-node": "^4.13.23",
     "@tailwindcss/vite": "^4.0.0",
     "axios": "^1.10.0",
     "k-convert": "^1.0.6",
