--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
     "react-toastify": "^11.0.3",
-    "tailwindcss": "^4.0.0"
+    "tailwindcss": "^4.0.0",
+     "vite": "^6.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -33,7 +34,7 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
-    "globals": "^15.14.0",
-    "vite": "^6.0.5"
+    "globals": "^15.14.0"
+   
   }
 }
