--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,22 +1,20 @@
-
-{
+ {
     "version": 2,
-    "functions": {
-      "server.js": {
-        "maxDuration": 10
-      }
-    },
     "builds": [
-      {
-        "src": "server.js",
-        "use": "@vercel/node"
-      }
+        {
+            "src": "server.js",
+            "use": "@vercel/node",
+            "config": {
+                "includeFiles": [
+                    "dist/**"
+                ]
+            }
+        }
     ],
     "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "server.js"
-      }
+        {
+            "src": "/(.*)",
+            "dest": "server.js"
+        }
     ]
-  }
-  
+}
